# metaldetector

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml
classifier/: CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
